# game-glut

./: .gitignore  CMakeLists.txt  bouncing.c  gcc.bat
.cache/clangd/index/: bmp.c.1FF0F5FD6B24DAB9.idx  bmp.h.500EFA2319CE4FCC.idx  glut.h.77D4F59CA6F9E9F5.idx  main.c.1AD2474515B34482.idx
include/glad/: glad.h
lib/: fact.h  glad.c
src/: bmp.c  bmp.h  main.c
